Fix overlapping of issue message

--- a/server/sonar-web/src/main/less/components/issues.less
+++ b/server/sonar-web/src/main/less/components/issues.less
@@ -41,7 +41,7 @@
 
 .issue-message {
   padding-left: @leftPadding;
-  padding-right: 40px + @rightPadding;
+  padding-right: 90px + @rightPadding;
   line-height: 1.5;
   font-size: @baseFontSize;
   font-weight: 500;
